@@ -1,26 +1,27 @@
 package com.likelion.staycare.global.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
-    @Value("${cors.allowed-origins:http://localhost:8080,http://localhost:5173,http://localhost:3000}")
-    private String[] allowedOrigins;
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins));
+        // 수정: 배포 도메인과 로컬 프론트 주소를 명시적으로 허용
+        config.setAllowedOrigins(List.of(
+                "https://api.staycare.shop",
+                "http://localhost:8080",
+                "http://localhost:5173",
+                "http://localhost:3000"
+        ));
 
         config.setAllowedMethods(
                 List.of("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"));
